Bug 1003100 - pushState() in iframe fails when reloading with CTRL+F5, r=bz